--- a/bmr-replication-files.html
+++ b/bmr-replication-files.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Personal Website of Keith O'Hara">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
+    <meta name="keywords" content="Bayesian, Macroeconometrics, BMR, Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
