--- a/bmr.html
+++ b/bmr.html
@@ -14,7 +14,7 @@ h3:target { padding-top: 60px; margin-top: -60px;}
     <meta name="description" content="Personal Website of Keith O'Hara">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
+    <meta name="keywords" content="Bayesian, Macroeconometrics, BMR, Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
